--- a/01_Week1/04_Loops/04_A_broken_loops_activity.ipynb
+++ b/01_Week1/04_Loops/04_A_broken_loops_activity.ipynb
@@ -23,14 +23,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apples\n",
+      "fish\n",
+      "chips\n",
+      "cookies\n"
+     ]
+    }
+   ],
    "source": [
     "myGroceryList = ['apples','fish','chips','cookies'] # This line creates a list called \"myGroceryList\"\n",
     "                                                    # containing strings ('apples','fish',...)\n",
     "# Defining a for loop. Check the error and compare with working loops\n",
-    "for groceryItem in myGroceryList\n",
+    "for groceryItem in myGroceryList:\n",
     "    print(groceryItem)"
    ]
   },
@@ -43,31 +54,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "myGroceryList = ['apples','fish','chips','cookies']\n",
-    "for in myGroceryList:\n",
-    "    print(groceryItem)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This is the same cell as above with a different issue. Look at the comments above and see if you can fix this cell. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apples\n",
+      "fish\n",
+      "chips\n",
+      "cookies\n"
+     ]
+    }
+   ],
    "source": [
     "myGroceryList = ['apples','fish','chips','cookies']\n",
     "for groceryItem in myGroceryList:\n",
-    "print(groceryItem)"
+    "    print(groceryItem)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is the same cell as above with a different issue. Look at the comments above and see if you can fix this cell. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apples\n",
+      "fish\n",
+      "chips\n",
+      "cookies\n"
+     ]
+    }
+   ],
+   "source": [
+    "myGroceryList = ['apples','fish','chips','cookies']\n",
+    "for groceryItem in myGroceryList:\n",
+    "    print(groceryItem)"
    ]
   },
   {
@@ -79,16 +112,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index:  0  Item:  apples\n",
+      "Index:  1  Item:  fish\n",
+      "Index:  2  Item:  chips\n",
+      "Index:  3  Item:  cookies\n"
+     ]
+    }
+   ],
    "source": [
     "myGroceryList = ['apples','fish','chips','cookies']\n",
     "\n",
     "# the \"range\" function basically creates a list you don't see that runs from the first argument\n",
     "# to the second, incrementing by 1. Importantly, the second argument is not inclusive, so currently\n",
     "# the \"range\" function below will run over the integers 1,2,3\n",
-    "for index in range(1,4): \n",
+    "for index in range(0,4): \n",
     "    print('Index: ',index,' Item: ',myGroceryList[index]) # This is indexing a list. \n",
     "                                       # If index is equal to 1,\n",
     "                                       # which element of this list is being accessed? You\n",
@@ -105,9 +149,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The length of my list is:  4\n",
+      "[3, 3, 2, 5]\n"
+     ]
+    }
+   ],
    "source": [
     "myGroceryListAmounts = [2,2,1,4]\n",
     "print('The length of my list is: ',len(myGroceryListAmounts)) # Just printing the length of the list, note\n",
@@ -118,7 +171,7 @@
     "# runs over the integers 0,1,2,3. Since list indexing starts at 0, this is all of the numbers\n",
     "# in the list.\n",
     "for index in range(0,len(myGroceryListAmounts)): \n",
-    "    myGroceryListAmounts[index] = 1\n",
+    "    myGroceryListAmounts[index] += 1\n",
     "print(myGroceryListAmounts)"
    ]
   },
@@ -141,14 +194,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apples\n",
+      "fish\n",
+      "chips\n",
+      "cookies\n"
+     ]
+    }
+   ],
    "source": [
     "myGroceryList = ['apples','fish','chips','cookies']\n",
     "myGroceryListIndex = 0 # This is the same thing as doing\n",
     "                       # for myGroceryListIndex in range(5):\n",
-    "while myGroceryListIndex < 3\n",
+    "while myGroceryListIndex < 4:\n",
     "    print(myGroceryList[myGroceryListIndex])\n",
     "    myGroceryListIndex = myGroceryListIndex + 1 # Always make sure to update your condition\n",
     "                                                # variable on each iteration"
@@ -156,13 +220,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apples\n",
+      "fish\n",
+      "chips\n",
+      "cookies\n"
+     ]
+    }
+   ],
    "source": [
     "myGroceryList = ['apples','fish','chips','cookies']\n",
     "myGroceryListIndex = 0\n",
-    "while:\n",
+    "while myGroceryListIndex < 4:\n",
     "    print(myGroceryList[myGroceryListIndex])\n",
     "    myGroceryListIndex = myGroceryListIndex + 1 # Always make sure to update your condition\n",
     "                                                # variable on each iteration"
@@ -170,26 +245,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "myNumber = 0\n",
+    "myNumber2 = myNumber + 1\n",
+    "\n",
     "while myNumber < 5:\n",
-    "print(myNumber)\n",
-    "myNumber = myNumber + 1"
+    "    print(myNumber2)\n",
+    "    break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apples\n"
+     ]
+    }
+   ],
    "source": [
     "myGroceryList = ['apples','fish','chips','cookies']\n",
     "myGroceryListIndex = 0\n",
-    "while myGroceryListIndex < 3:\n",
-    "    print(myGroceryList[myGroceryListIndex])\n"
+    "while myGroceryListIndex < 4:\n",
+    "    print(myGroceryList[myGroceryListIndex])\n",
+    "    break\n",
+    "    \n"
    ]
   },
   {
@@ -201,14 +296,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The length of my grocery list is:  4\n",
+      "apples\n",
+      "fish\n",
+      "chips\n",
+      "cookies\n"
+     ]
+    }
+   ],
    "source": [
     "myGroceryList = ['apples','fish','chips','cookies']\n",
     "print('The length of my grocery list is: ',len(myGroceryList))\n",
     "myGroceryListIndex = 0\n",
-    "while myGroceryListIndex < 2:\n",
+    "while myGroceryListIndex < 4:\n",
     "    print(myGroceryList[myGroceryListIndex])\n",
     "    myGroceryListIndex = myGroceryListIndex + 1\n"
    ]
@@ -237,7 +344,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
