day 3 activity 4 part 2

--- a/01_Week1/04_Loops/04_B_for_loop_activity.ipynb
+++ b/01_Week1/04_Loops/04_B_for_loop_activity.ipynb
@@ -17,10 +17,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "8\n",
+      "9\n",
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "myList = [7,8,9,12]\n",
+    "\n",
+    "for myNumbers in myList:\n",
+    "    print (myNumbers)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -32,10 +48,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "9\n",
+      "10\n",
+      "13\n"
+     ]
+    }
+   ],
+   "source": [
+    "myList = [7,8,9,12]\n",
+    "\n",
+    "for myNumbers in myList:\n",
+    "    myNewNumbers = myNumbers + 1\n",
+    "    print(myNewNumbers)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -47,10 +80,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Banci\n",
+      "Kesha\n",
+      "Dhruv\n",
+      "Hari\n"
+     ]
+    }
+   ],
+   "source": [
+    "myList = ['Banci','Kesha', 'Dhruv', 'Hari']\n",
+    "\n",
+    "for mySiblings in myList:\n",
+    "    print(mySiblings)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -129,7 +178,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
