day 3 activity 4 parts 2 and 3

--- a/01_Week1/04_Loops/04_B_for_loop_activity.ipynb
+++ b/01_Week1/04_Loops/04_B_for_loop_activity.ipynb
@@ -111,10 +111,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "for myNumber in range(0,6):\n",
+    "    print(myNumber)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -126,10 +142,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Banci\n",
+      "Banci\n"
+     ]
+    }
+   ],
+   "source": [
+    "myList = ['Banci','Kesha', 'Dhruv', 'Hari']\n",
+    "\n",
+    "print(myList[0])\n",
+    "index = 0 \n",
+    "\n",
+    "print(myList[index])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -141,10 +173,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Banci\n",
+      "Kesha\n",
+      "Dhruv\n",
+      "Hari\n"
+     ]
+    }
+   ],
+   "source": [
+    "myList = ['Banci','Kesha', 'Dhruv', 'Hari']\n",
+    "\n",
+    "for index in range(0,4):\n",
+    "    print(myList[index])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -152,6 +200,35 @@
    "source": [
     "# 7\n",
     "Add a second list called `myList2` at the top of the cell, and then paste your code from problem 6 below it. Then instead of just printing `myList[index]`, print each element of both `myList` and `myList2` by adding a second print statement. This is one major use of for loops: doing some operation on each element of multiple lists."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Banci\n",
+      "Nishi\n",
+      "Kesha\n",
+      "Dhron\n",
+      "Dhruv\n",
+      "Vrishan\n",
+      "Hari\n",
+      "Rushvi\n"
+     ]
+    }
+   ],
+   "source": [
+    "myList = ['Banci','Kesha','Dhruv','Hari']\n",
+    "mySecondList = ['Nishi','Dhron','Vrishan','Rushvi']\n",
+    "\n",
+    "for index in range(0,4):\n",
+    "    print(myList[index])\n",
+    "    print(mySecondList[index])"
    ]
   },
   {
