--- a/01_Week1/04_Loops/04_C_while_loop_activity.ipynb
+++ b/01_Week1/04_Loops/04_C_while_loop_activity.ipynb
@@ -17,10 +17,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "8\n",
+      "9\n",
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "myList = [7,8,9,12]\n",
+    "myNumber = 0\n",
+    "\n",
+    "while myNumber < len(myList):\n",
+    "    print(myList[myNumber])\n",
+    "    myNumber = myNumber + 1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -32,10 +50,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "9\n",
+      "10\n",
+      "13\n"
+     ]
+    }
+   ],
+   "source": [
+    "myList = [7,8,9,12]\n",
+    "myNumber = 0\n",
+    "\n",
+    "while myNumber < len(myList):\n",
+    "    myList[myNumber] = myList[myNumber] + 1\n",
+    "    print(myList[myNumber])\n",
+    "    myNumber = myNumber + 1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -47,10 +84,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Banci\n",
+      "Kesha\n",
+      "Dhruv\n",
+      "Hari\n"
+     ]
+    }
+   ],
+   "source": [
+    "mySiblingList = ['Banci','Kesha','Dhruv','Hari']\n",
+    "myNumber = 0\n",
+    "\n",
+    "while myNumber < len(myList):\n",
+    "    print(mySiblingList[myNumber])\n",
+    "    myNumber = myNumber + 1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -58,6 +113,31 @@
    "source": [
     "# 4\n",
     "Start a `while` loop with `while True:`, this will always be the case, so the loop will run forever. However, you can still check conditions inside of the loop and use a `break` statement to leave it. Use the same loop from problem 1, use this different form of `while True:` and a `break` statement. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[7, 8, 9, 12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "myList = [7,8,9,12]\n",
+    "myNumber = 0\n",
+    "\n",
+    "while True:\n",
+    "    if myNumber < len(myList):\n",
+    "        print(myList)\n",
+    "        break\n",
+    "    else:\n",
+    "        break"
    ]
   },
   {
@@ -84,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
